完成配置文件手动更新

--- a/config/src/main/resources/application.yml
+++ b/config/src/main/resources/application.yml
@@ -6,7 +6,14 @@ spring:
       label: master
       server:
         git:
-          url: git@github.com:zyy13579/spring_cloud_demo.git
-          search-paths: spring_cloud_demo/config_file
+#          uri: git@github.com:zyy13579/spring_cloud_demo.git
+#          uri: https://github.com/zyy13579/spring_cloud_demo.git
+#          search-paths: spring_cloud_demo/config_file
+          uri: git@gitee.com:z_y_y/spring_cloud_config.git
+          search-paths: spring_cloud_config
 server:
   port: 8888
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
