--- a/config/src/main/resources/application.yml
+++ b/config/src/main/resources/application.yml
@@ -11,9 +11,19 @@ spring:
 #          search-paths: spring_cloud_demo/config_file
           uri: git@gitee.com:z_y_y/spring_cloud_config.git
           search-paths: spring_cloud_config
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: scadmin
+    password: 123456
 server:
   port: 8888
 eureka:
   client:
     service-url:
       defaultZone: http://localhost:8761/eureka/
+management:
+  endpoints:
+    web:
+      exposure:
+        include: ["bus-refresh"]
