--- a/service_provider/src/main/resources/application.yml
+++ b/service_provider/src/main/resources/application.yml
@@ -13,6 +13,11 @@ spring:
       discovery:
         enabled: true
         service-id: config-server
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: scadmin
+    password: 123456
 
 management:
   endpoints:
